--- a/NetworkDemo1/app/src/main/res/layout/activity_web_view.xml
+++ b/NetworkDemo1/app/src/main/res/layout/activity_web_view.xml
@@ -14,11 +14,11 @@
         android:text="https://www.northeastern.edu/"/>
 
     <Button
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
         android:id="@+id/web_dest_button"
-        android:text="Load Website"
-        ></Button>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="Load Website"></Button>
 
     <WebView
         android:layout_width="match_parent"
